fix: replace virtual thread executor for http request processing